ncc/testsuite/positive/before-base.n
class A {
  public this (x : int) {
    System.Console.WriteLine (x)
  }
}

class B : A {
  x : int = 3;
  public this () {
    base (this.x)
  }
};

_ = B ();


/*
BEGIN-OUTPUT
3
END-OUTPUT
*/