ncc/testsuite/negative/struct.n

struct A {
  x : int = 43; // E: instance field initalizers are not allowed in structs
}

struct B {
  x : int;

  public this ()  { } // E: explicit parameterless constructor in value type is not allowed
}
